# cardiopathy-classification

./: README.md  pyproject.toml
2_BaselineModel/: README.md  baseline_model.ipynb
3_Model/: custom_transforms.py  monai_resnet.ipynb
data/: data_helper.py
