[project]
name = "acdc-ai4imaging"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "gdown>=5.2.0",
    "ipython>=8.32.0",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.10.0",
    "monai>=1.3.2",
    "nibabel>=5.3.2",
    "notebook>=7.3.2",
    "numpy<2.0",
    "opencv-python>=4.11.0.86",
    "optuna>=4.2.0",
    "pandas>=2.2.3",
    "pytorch-lightning>=2.5.0.post0",
    "rich==10.2.2",
    "scikit-image>=0.25.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "seaborn>=0.13.2",
    "tensorboard>=2.18.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
